# accounting_app

./: .coveragerc  .flake8  .gitignore  CONTRIBUTING.md  Makefile  README.md  README_FASE6.md  accounting.db  alembic.ini  env.example  make.bat  pyproject.toml  pytest.ini  samconfig.toml  template.yaml  test_debug.py  tiendex_books.txt
.github/workflows/: deploy.yml
application/: config.py  container.py  di_container.py  lambda_handler.py  main.py
application/config/: __init__.py  environment.py
application/schemas/: __init__.py  task_schema.py  user_schema.py
docs/architecture/: development-guide.md  layers.md  overview.md
docs/aws/: 01-parameter-setup.md
docs/database/: migrations.md  structure.md
docs/deployment/: infrastructure.md  process.md
docs/git/: workflow.md
docs/quality/: coverage.md  error-handling.md  linting.md  testing.md
docs/setup/: environment.md  local-run.md
docs/tech-stack/: components.md  versions.md
domain/constants/: task_constants.py
domain/dtos/: task_dtos.py
domain/entities/: task_entity.py  user_entity.py
domain/enums/: task_status_enum.py  user_status_enum.py
domain/exceptions/: business_exceptions.py  error_mapping.py
domain/gateways/: task_gateway.py  user_gateway.py
domain/models/: task.py  user.py
domain/usecases/: complete_task.py  complete_task_use_case.py  create_task.py  create_task_use_case.py  list_all_users.py  list_all_users_use_case.py  list_tasks_by_user.py  list_tasks_by_user_use_case.py
infrastructure/driven_adapters/event_sender/: mock_event_bus.py
infrastructure/driven_adapters/repositories/: base.py  task_repository.py  user_repository_fake.py
infrastructure/entrypoints/events/: mock_event_listener.py
infrastructure/entrypoints/http/: task_routes.py  user_routes.py
infrastructure/helpers/database/: __init__.py  connection.py  init_db.py  unit_of_work.py
infrastructure/helpers/di/: __init__.py  dependency_container.py  flask_integration.py  service_registration.py
infrastructure/helpers/errors/: __init__.py  error_handlers.py
infrastructure/helpers/logger/: __init__.py  logger_config.py
infrastructure/helpers/middleware/: __init__.py  http_middleware.py  rate_limit_middleware.py
infrastructure/helpers/utils/: __init__.py  validation_utils.py
migration/: README.md  env.py
migration/versions/: ba4800daf143_initial_migration_mysql.py
scripts/: build.py  build.sh  deploy.sh  format.sh  generate-migration.sh  migrate.sh  quality.sh  setup-aws-parameters.sh  test.sh
tests/: conftest.py
tests/e2e/: test_task_management_e2e.py
tests/integration/: test_api_endpoints_integration.py  test_flask_integration.py  test_mysql_connection.py  test_pydantic_integration.py  test_task_management_flow.py
tests/unit/: test_task_model.py
tests/unit/application/: __init__.py  test_main_health_checks.py
tests/unit/application/config/: test_cors_configuration.py  test_environment_validation.py
tests/unit/application/schemas/: test_task_schema.py  test_user_schema.py
tests/unit/domain/entities/: test_task_entity.py  test_user_entity.py
tests/unit/domain/use_cases/: test_complete_task_use_case.py  test_create_task_use_case.py
tests/unit/domain/usecases/: test_complete_task_use_case.py  test_create_task_use_case.py  test_list_all_users_use_case.py  test_list_tasks_by_user_use_case.py
tests/unit/http/: __init__.py
tests/unit/infrastructure/driven_adapters/repositories/: test_task_repository.py
tests/unit/infrastructure/helpers/errors/: test_error_handlers.py
tests/unit/infrastructure/helpers/middleware/: test_rate_limit_middleware.py
tests/unit/models/: test_task.py  test_user.py
tests/unit/repositories/: __init__.py  test_fake_user_service.py  test_task_repository.py
tests/unit/usecases/: __init__.py  test_complete_task.py  test_create_task.py  test_list_all_users.py  test_list_tasks_by_user.py
